# aurynk

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  build.gradle.kts  index.html  meson.build  meson_options.txt  mkdocs.yml  pyproject.toml  requirements.txt  settings.gradle.kts  snapcraft.yaml  test_encoder_parsing.py
.github/: FUNDING.yml
.github/workflows/: auto-merge.yml  flathub-build.yml  flatpak-nightly.yml  snap-test.yml
assets/: index-B-Wr_8GN.js
aurynk/: __init__.py  __main__.py  adb_controller.py  app.py  application.py  device_details_window.py  main.py  main_window.py  pairing_dialog.py  qr_widget.py
aurynk/core/: adb_manager.py  device_manager.py  pairing.py  scrcpy_runner.py
aurynk/dialogs/: pairing_dialog.py
aurynk/lib/: adb_controller.py  scrcpy_manager.py  tray_controller.py
aurynk/models/: device.py
aurynk/scripts/: __init__.py
aurynk/services/: __init__.py  device_monitor.py  tray_service.py  udev_proxy_client.py  usb_monitor.py
aurynk/tools/: aurynk_udev_proxy.py
aurynk/utils/: adb_pairing.py  adb_utils.py  device_events.py  device_store.py  encoder_manager.py  logger.py  notify.py  power.py  settings.py
aurynk/widgets/: qr_widget.py
aurynk/windows/: device_details_window.py  main_window.py
data/: aurynk-udev-proxy.desktop  com.yourdomain.aurynk.appdata.xml  com.yourdomain.aurynk.desktop.in  com.yourdomain.aurynk.gresource.xml  com.yourdomain.mirage.appdata.xml  com.yourdomain.mirage.desktop.in  com.yourdomain.mirage.gresource.xml  io.github.IshuSinghSE.aurynk.gresource.xml  io.github.IshuSinghSE.aurynk.metainfo.xml  meson.build  mirage_paired_devices.json
data/styles/: aurynk.css  device_status.css
data/ui/: device_details_window.ui  main_window.ui  shortcuts_window.ui
debian/: changelog  control  copyright  install  rules
desktopApp/: build.gradle.kts
docs/: BUILDING.md  TESTING.md  contributing.md  features.md  index.md  installation.md
flatpak/: aurynk-flatpak-wrapper.sh  com.aurynk.aurynk.yml  com.yourdomain.aurynk.yml  com.yourdomain.mirage.yml  io.github.IshuSinghSE.aurynk.yml  python-dependencies.json
flatpak/ayatana-lib/: libayatana-appindicator3.so.1  libayatana-ido3-0.4.so.0  libayatana-indicator3.so.7
gradle/: libs.versions.toml
mirage/: __init__.py  __main__.py  adb_controller.py  app.py  device_details_window.py  main_window.py  pairing_dialog.py  scrcpy_manager.py
nightly/: summary  summary.idx
nightly/summaries/: 01144d6e00a48a23253fcd34fa6c4a5dad762d2180f8fad6bae4da7a245a8b10-72a9ff4b987482fc6de07dad0b221be9b6e188a1e6deb4264d7058f1b4ba7503.delta  0ac87d90230a97d20288ae41fa30913c3aae3456fce370225050b99d5b5d7030-04428e9ffd78d35a4f4fd88a502a78d782d2b6f5297bc62a0a8a9a909fd44c02.delta  0b0789af34997ea5a7958620358850dc582a42ee11275305fe870e3208b4cb37-e50c450d2d5eae8fd960e5ecae0ea852defc99c963ec8ab3fec0d96f08bc3050.delta  0bba543b4bb2d454cb856024605cbad8cd889086c618bacc399a4f72603dbfc7-e50c450d2d5eae8fd960e5ecae0ea852defc99c963ec8ab3fec0d96f08bc3050.delta  0be2246674630d101d3a6de7d94b69b7171cfed08923a8bacc5a74982ccf9e2c-059d4ec3133d94aa234a1c7d40b2fe343434b22af0f7f68eb9e8bce83f772eec.delta  0e96a057e2c78b7e93ff5121ba2b8c914af2bccaeebaa4efcc00407db66f72f4-8d12a265dc20fba19dd0e0f4e8b40d3766b481c60505195c4b09fdf536159ef1.delta  11748b26bbc0d22cb6d2c4e9ea1d88523e8dec1c2b4e9f0a15cab1a6b84df1e3-439d0ca4dcdff5c45c13d1b91fab5d9c385373223c6413fb03c7bdfb419349be.delta  12f4612d7ac868bfcff9fc33333c8ae00edf6bfc9f5a45901c1d622ebb06c541-12d864f53f600be2527abcc38542a60a2c1e14f45311a95aba673ca79b803e60.delta  185fb3de8eb3870090cc87ed6cd4d445888fec8ac229ec0210413f88755ea09a-c2f9a38e7db0334bfa4ca8dde76a0504aaa379a6ca704d80604c6c356aecb560.delta  1ebcccad0f1e4e93929ce5cf2ab766e73dbfb840b0e32a53f2135742c9ee9369-b1167ec9f67169a0cce33d66d86b3e1430c24525b61e0dadf72420e83f41ea65.delta  23d4b394fc099f84ad300f04e422047ff0f89f8aa506b8e76ba6f9b6e771e20a-72a9ff4b987482fc6de07dad0b221be9b6e188a1e6deb4264d7058f1b4ba7503.delta  30d3c916f0e1de85f67008b997f7b3c97f0d8df3ac3ccfce666dfcedd40efada-75dea40a2a44e9edfa9b5b46037065f211422ac70f972acc8a2b6bc7e2128069.delta  37b8c749fa71147e1b2c3014f407c12e81ee796efb4dbe8eee013a0f0dad8925-7a3273f5639e18c0114281798b0736829b1e39b3514da2d3cdf8b1e177839547.delta  41a520e7beb924ff242b43acc16ce632502b196098072f8ef50e0683176f630f-13d2f84e19899691cbc561ba9f96df9b71e11a50dbad9731c7e9ecc1120426ff.delta  46e0f8e8320d5f2ac933bbfa6aebff2f063e261e7027f872898f76b3b29648a3-72a9ff4b987482fc6de07dad0b221be9b6e188a1e6deb4264d7058f1b4ba7503.delta  56cc0721e02087031882d870aca71c48fa6e32b9e1d4b4c2e88eaf45c2413af0-e50c450d2d5eae8fd960e5ecae0ea852defc99c963ec8ab3fec0d96f08bc3050.delta  5e1765712382be09c995f39752e2ad63339e859e1d0fda948f193941ca47e0c7-25850ba1138ec2c7c6db50262a6d26d68f9e982bf29cab4833ade7c686070bf7.delta  6299f9202c72de78d68308c20435e8e1a501c20379e318d38de7a6006feb10e9-265a1dedf8a823865cdde69153ead459674ff84cf85649ee0fa622a260f00a0f.delta  6743ec4599ec51f816112666f7b1528769669cf638ae280a2848ee3dea07f300-7a3273f5639e18c0114281798b0736829b1e39b3514da2d3cdf8b1e177839547.delta  713515b9129a5b30c16d1296546047a18076bf2aa1443773eac84ce342d3c691-13d2f84e19899691cbc561ba9f96df9b71e11a50dbad9731c7e9ecc1120426ff.delta  7859f61d7f6a18d32d83e755587baa659439953dad872a839a35fcb0b7c6b782-439d0ca4dcdff5c45c13d1b91fab5d9c385373223c6413fb03c7bdfb419349be.delta  796cebd328a27e54c57961b19f52e2e467121eb0e88eab9025fbd27c034d320b-a246ea8c42feda44efb6c4747201a5b620bc1e3b7ec5602c6559190cefe6096e.delta  7e476484b1dd7860181f2022ce4773f1da4823ac5ab73a161e78af7d8fe41d35-a246ea8c42feda44efb6c4747201a5b620bc1e3b7ec5602c6559190cefe6096e.delta  (+24 more)
po/: LINGUAS  aurynk.pot  es.po  fr.po  hi.po  ja.po  ko.po  readme_zh_CN.po  ru.po
rust_engine/: Cargo.toml
rust_engine/src/: lib.rs
scripts/: aurynk  aurynk_tray.py  aurynk_udev_proxy.py  changelog_to_debian.py  changelog_to_metainfo.py  publish-flathub.sh  publish-release.sh
site/: 404.html  index.html  sitemap.xml
snap/: snapcraft.yaml
src/: main.py
src/ui/: utils.py  (+3 more)
tests/: test_client_integration.py  test_pairing.py  test_udev_proxy_sim.py  test_usb_monitor.py
(+189 files in other folders)
